<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle">PlannerCoins:</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_semanal">Semana</string>
    <string name="menu_calendario">Mes</string>
    <string name="menu_temporizador">Temporizador</string>
    <string name="menu_estadisticas">Estadisticas</string>
    <string name="menu_tienda">Tienda</string>
</resources>