<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_semanal">

    <fragment
        android:id="@+id/nav_calendario"
        android:name="com.example.navigationdrawer.ui.calendarioMensual.CalendarFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/nav_Temporizador"
        android:name="com.example.navigationdrawer.ui.Temporizador.TempFragment"
        android:label="@string/menu_temporizador"
        tools:layout="@layout/fragment_temporizador" >
        <action
            android:id="@+id/action_nav_Temporizador_to_nav_estadisticas"
            app:destination="@id/nav_estadisticas" />
    </fragment>

    <fragment
        android:id="@+id/nav_tienda"
        android:name="com.example.navigationdrawer.ui.tienda.TiendaFragment"
        android:label="@string/menu_tienda"
        tools:layout="@layout/fragment_tienda" />
    <fragment
        android:id="@+id/nav_semanal"
        android:name="com.example.navigationdrawer.ui.CalendarioSemanal.SemanalFragment"
        android:label="Semana"
        tools:layout="@layout/fragment_semanal" />
    <fragment
        android:id="@+id/nav_estadisticas"
        android:name="com.example.navigationdrawer.ui.estadisticas.EstadFragment"
        android:label="@string/menu_estadisticas"
        tools:layout="@layout/fragment_estad" >
        <action
            android:id="@+id/action_nav_estadisticas_to_nav_Temporizador"
            app:destination="@id/nav_Temporizador" />
    </fragment>
</navigation>